--- a/contents/css/kitcog.css
+++ b/contents/css/kitcog.css
@@ -54,6 +54,9 @@ header{
   padding: 60px;
   margin: 0;
   color: #ffffff;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1300px;
 }
 
 :root {
@@ -69,6 +72,24 @@ header{
 }
 #slide3{
   background-image: url("../sample_image/sample3.jpg");
+}
+/* slider end */
+
+.containts{
+  display: flex;
+  justify-content: center;
+  padding: 30px, auto;
+}
+
+.containts_text{
+  text-decoration: none;
+  display: inline-block;
+}
+
+.contents_image{
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
 }
 
 /*footer*/
