--- a/contents/css/kitcog.css
+++ b/contents/css/kitcog.css
@@ -9,34 +9,41 @@ header{
   width: 100%;
   z-index: 999;
   background: #ffffff;
-  border-bottom:solid #f8f8f8;
+  border-bottom:solid #FFD644;
   opacity: 0.95;
 }
 
 .navbar{
-  padding: 10px 0;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
 
 .header_navgroup{
+  padding: 10px 0;
   margin-left: auto;
   display: flex;
   flex-wrap: wrap;
 }
 
 .header_navitem{
-  padding-left: 60px;
+  margin-left: 60px;
   font-size: 18px;
-  text-decoration: none;
   color: #333333;
+}
+
+.header_navitem::after{
+  background-color: #FFD644;
 }
 
 .header_title{
   font-size: 20px;
   text-decoration: none;
   color: #333333;
+}
+
+.header_title::after{
+  background-color: #ffffff;
 }
 
 .swiper-container{
@@ -75,6 +82,19 @@ header{
 }
 /* slider end */
 
+.banner{
+  background-color:#FFD644;
+  margin: 15px 0;
+  border-top:solid #c0c0c0;
+  border-bottom:solid #c0c0c0;
+}
+
+.banner_text{
+  font-size: 20px;
+  color: #000000;
+  margin: 25px;
+}
+
 .containts{
   display: flex;
   justify-content: center;
@@ -104,8 +124,10 @@ header{
 }
 
 .member_text{
-  padding-left: 40px;
-  padding-right: 100px;
+  padding-left: 30px;
+  padding-right: 50px;
+  margin-bottom: 0;
+  list-style: none;
 }
 
 /* achivement */
@@ -121,27 +143,32 @@ header{
 
 /*footer*/
 footer{
-  padding: 25px 0;
+  padding: 15px 0;
   left: 0;
   width: 100%;
   background-color: #000000;
 }
 
 .footer_navgroup{
-  margin: 20px;
+  margin: 10px;
   flex-wrap: wrap;
 }
 
 .footer_tag{
   color: #ffffff;
   padding: 10px 0;
+  font-size: 13px;
 }
 
 .footer_navitem{
   color: #ffffff;
   font-size: 18px;
-  text-decoration: none;
-  padding-right: 60px;
+  margin-right: 20px;
+  font-size: 12px;
+}
+
+.footer_navitem::after{
+  background-color: #ffffff
 }
 
 /*template*/
@@ -151,6 +178,28 @@ footer{
   height: 100%;
   max-width: 1300px;
 }
+
+a {
+  position: relative;
+  display: inline-block;
+  text-decoration: none;
+}
+a::after {
+  position: absolute;
+  bottom: -4px;
+  left: 0;
+  content: '';
+  width: 100%;
+  height: 2px;
+  background: #333;
+  transform: scale(0, 1);
+  transform-origin: center top;
+  transition: transform .3s;
+}
+a:hover::after {
+  transform: scale(1, 1);
+}
+
 
 /*bodyのマージンをなくす*/
 body{
