--- a/contents/css/kitcog.css
+++ b/contents/css/kitcog.css
@@ -97,7 +97,8 @@ header{
 
 .containts{
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   padding: 30px, auto;
 }
 
@@ -114,7 +115,23 @@ header{
 
 /* member */
 .member_tag{
-  margin-bottom: 60px;
+  margin-top: 40px;
+  margin-bottom: 0;
+}
+
+.member_item{
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  padding-left: 30px;
+  padding-right: 30px;
+  margin-top: 15px;
+  margin-bottom: 55px;
+}
+
+.member_image{
+  height: 25px;
+  width: 25px;
 }
 
 .member_group{
@@ -124,9 +141,9 @@ header{
 }
 
 .member_text{
-  padding-left: 30px;
-  padding-right: 50px;
-  margin-bottom: 0;
+  margin: 0;
+  padding-left: 10px;
+  padding-top: 3.5px;
   list-style: none;
 }
 
